// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`converts from 1`] = `
"import style9 from 'style9';
\\"clbvhnp\\";"
`;

exports[`converts from 2`] = `"@keyframes clbvhnp{0%{color:blue}}"`;

exports[`converts to 1`] = `
"import style9 from 'style9';
\\"c1yehff3\\";"
`;

exports[`converts to 2`] = `"@keyframes c1yehff3{100%{color:blue}}"`;

exports[`supports complex styles and times 1`] = `
"import style9 from 'style9';
\\"c5rl3rj\\";"
`;

exports[`supports complex styles and times 2`] = `"@keyframes c5rl3rj{0%{top:0;left:0}30%{top:50px;margin-bottom:1px;margin-top:0;margin-right:0;margin-left:0}68%, 72%{left:50px;margin-bottom:5px}100%{top:100px;left:100%}}"`;

exports[`supports keyframes 1`] = `
"import style9 from 'style9';
\\"c1l2fbnf\\";"
`;

exports[`supports keyframes 2`] = `"@keyframes c1l2fbnf{0%{color:blue}100%{}}"`;

exports[`supports settings animationName directly 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    animationName: \\"csqo9ij\\"
  }
};
styles.default;"
`;

exports[`supports settings animationName directly 2`] = `"@keyframes c1px3r7c{0%{opacity:0}}.csqo9ij{animation-name:c1px3r7c}"`;
